# cpp_template

./: CMakeLists.txt  README.md
.github/workflows/: documentation.yaml  install.yaml  maxos.yaml  style.yaml  ubuntu.yaml  windows.yaml
cmake/: CodeCoverage.cmake  CodeFormat.cmake  GLSLShaders.cmake  Linter.cmake  UnitTest.cmake  tools.cmake
tests/: CMakeLists.txt  main.cpp
tests/check/: test1.cpp  tests.cpp
tests/check/subdir/: tests.cpp
